Ingress-with-tls/ingressrule.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-1
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
    # acme.cert-manager.io/http01-ingress-class: external-nginx
spec:
  ingressClassName: external-nginx
  rules:
    - host: app.ranaequator.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-service-1
                port:
                  number: 8080
  tls:
    - hosts:
        - app.ranaequator.club
      secretName: app-ranaequator-club
